// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormatNumber> i18n not ready should return same number and className when i18n is not ready 1`] = `
<FormatNumber
  className="some-class"
  fractions={2}
  number={1}
>
  <span
    className="some-class"
  >
    1.00
  </span>
</FormatNumber>
`;

exports[`<FormatNumber> i18n ready should format 0.1 into 0.10 1`] = `
<I18nProvider>
  <div>
    <FormatNumber
      className={null}
      fractions={2}
      number={0.1}
    >
      <span
        className={null}
      >
        0.10
      </span>
    </FormatNumber>
  </div>
</I18nProvider>
`;

exports[`<FormatNumber> i18n ready should format 1 into 1 1`] = `
<I18nProvider>
  <div>
    <FormatNumber
      className={null}
      fractions={0}
      number={1}
    >
      <span
        className={null}
      >
        1
      </span>
    </FormatNumber>
  </div>
</I18nProvider>
`;

exports[`<FormatNumber> i18n ready should format 1 into 1.00 1`] = `
<I18nProvider>
  <div>
    <FormatNumber
      className={null}
      fractions={2}
      number={1}
    >
      <span
        className={null}
      >
        1.00
      </span>
    </FormatNumber>
  </div>
</I18nProvider>
`;

exports[`<FormatNumber> i18n ready should format 1 into 1.000 1`] = `
<I18nProvider>
  <div>
    <FormatNumber
      className={null}
      fractions={3}
      number={1}
    >
      <span
        className={null}
      >
        1.000
      </span>
    </FormatNumber>
  </div>
</I18nProvider>
`;
